<resources>
    <string name="app_name">taxi client</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="point_to_b">Пункт назначения</string>
    <string name="point_at_a">Точка посадки</string>
    <string name="Already_have_an_account_Log_in">Уже есть аккаунт? Войти</string>
    <string name="Register">Зарегистрироваться</string>
    <string name="Repeat_password">Повтори пароль</string>
    <string name="password">Пароль</string>
    <string name="Come_up_with_a_login">Придумай логин</string>
    <string name="Login">Логин</string>
    <string name="Password">Пароль</string>
    <string name="Remember_me">Запомнить меня</string>
    <string name="login">Войти</string>
</resources>